[gd_scene load_steps=16 format=3 uid="uid://brvr7b13p05m6"]

[ext_resource type="Texture2D" uid="uid://e1afhsopgaya" path="res://icon.svg" id="1_0e48y"]
[ext_resource type="Script" uid="uid://cc30ajngfie06" path="res://gootdod.gd" id="2_epypp"]
[ext_resource type="Texture2D" uid="uid://o245i36ved8y" path="res://goudough.png" id="3_epypp"]
[ext_resource type="Texture2D" uid="uid://hqirqb56j81v" path="res://godoexee.png" id="4_0hol4"]
[ext_resource type="Script" uid="uid://cw2d0gagp04s7" path="res://godo.gd" id="4_q6r6c"]
[ext_resource type="Script" uid="uid://c4yjf06op0kci" path="res://godo_2.gd" id="5_d21ai"]
[ext_resource type="Texture2D" uid="uid://ce48y7s4cejri" path="res://godoexe.png" id="5_rj586"]
[ext_resource type="Script" uid="uid://c3hwfna0udgqv" path="res://godo_3.gd" id="6_rj586"]
[ext_resource type="Texture2D" uid="uid://lull7mjneok4" path="res://upgradeIcon.png" id="9_4d7sh"]
[ext_resource type="Texture2D" uid="uid://ddp80580ecu74" path="res://ddr2ram.png" id="10_hqns4"]
[ext_resource type="Script" uid="uid://w1fnptkxvd3b" path="res://ddr_2_ramstick.gd" id="11_x0ka3"]
[ext_resource type="Texture2D" uid="uid://5aa8y1tfyv0c" path="res://i72600.png" id="12_x0ka3"]
[ext_resource type="Script" uid="uid://beo4dbe2ulli4" path="res://i_72600_processor.gd" id="13_d2bti"]
[ext_resource type="Texture2D" uid="uid://cnqy7qke3d2jn" path="res://lenovoofficemouse.png" id="13_nr8wp"]
[ext_resource type="Script" uid="uid://c3yc4bj7fnm55" path="res://lenovoofficemouse.gd" id="14_d2bti"]

[node name="Node2D" type="Node2D"]

[node name="godonumber" type="Label" parent="."]
offset_left = 510.0
offset_top = 182.0
offset_right = 819.0
offset_bottom = 228.0
text = "0"

[node name="godonumber2" type="Label" parent="."]
offset_left = 512.0
offset_top = 232.0
offset_right = 821.0
offset_bottom = 270.0
text = "0.0 g/s"

[node name="godoot" type="Button" parent="."]
offset_left = 588.0
offset_top = 288.0
offset_right = 716.0
offset_bottom = 416.0
icon = ExtResource("1_0e48y")
expand_icon = true
script = ExtResource("2_epypp")

[node name="HuanSecondTimer" type="Timer" parent="."]
autostart = true

[node name="UpgradeCheckTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BuildingsOwned" type="Node" parent="."]

[node name="UpgradesOwned" type="Node" parent="."]

[node name="Buildings" type="Node" parent="."]

[node name="godo" type="Sprite2D" parent="Buildings"]
visible = false
position = Vector2(223.568, 346.999)
scale = Vector2(0.55362, 0.562513)
texture = ExtResource("1_0e48y")
script = ExtResource("4_q6r6c")

[node name="godo2" type="Sprite2D" parent="Buildings"]
visible = false
position = Vector2(111, 135)
scale = Vector2(0.0716666, 0.0704167)
texture = ExtResource("5_rj586")
script = ExtResource("5_d21ai")

[node name="godo3" type="Sprite2D" parent="Buildings"]
visible = false
position = Vector2(364, 364)
scale = Vector2(0.08465, 0.0850472)
texture = ExtResource("4_0hol4")
script = ExtResource("6_rj586")

[node name="BuyButtons" type="VBoxContainer" parent="."]
offset_left = 870.0
offset_top = 20.0
offset_right = 1255.0
offset_bottom = 698.0

[node name="buildingTemplate" type="TextureButton" parent="BuyButtons"]
visible = false
custom_minimum_size = Vector2(0, 73.15)
layout_mode = 2
texture_normal = ExtResource("3_epypp")
texture_pressed = ExtResource("3_epypp")
texture_hover = ExtResource("3_epypp")
texture_disabled = ExtResource("3_epypp")
texture_focused = ExtResource("3_epypp")
ignore_texture_size = true
stretch_mode = 0

[node name="icon" type="TextureRect" parent="BuyButtons/buildingTemplate"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 132.0
offset_bottom = 133.0
scale = Vector2(0.515625, 0.5)
texture = ExtResource("1_0e48y")
expand_mode = 1

[node name="displayName" type="Label" parent="BuyButtons/buildingTemplate"]
layout_mode = 0
offset_left = 70.0
offset_top = 5.0
offset_right = 181.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "building name"

[node name="cost" type="Label" parent="BuyButtons/buildingTemplate"]
layout_mode = 0
offset_left = 70.0
offset_top = 27.0
offset_right = 181.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "godot cost"

[node name="ownednum" type="Label" parent="BuyButtons/buildingTemplate"]
layout_mode = 0
offset_left = 324.0
offset_top = 6.0
offset_right = 368.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "owned: 0"

[node name="UpgradeContainer" type="VBoxContainer" parent="."]
offset_left = 28.0
offset_top = 23.0
offset_right = 140.0
offset_bottom = 683.0

[node name="upgradeTemplate" type="TextureButton" parent="UpgradeContainer"]
visible = false
custom_minimum_size = Vector2(0.015, 111.155)
layout_mode = 2
texture_normal = ExtResource("9_4d7sh")
texture_pressed = ExtResource("9_4d7sh")
texture_hover = ExtResource("9_4d7sh")
texture_disabled = ExtResource("9_4d7sh")
texture_focused = ExtResource("9_4d7sh")
ignore_texture_size = true
stretch_mode = 0

[node name="icon" type="TextureRect" parent="UpgradeContainer/upgradeTemplate"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 111.0
texture = ExtResource("10_hqns4")
expand_mode = 1

[node name="Upgrades" type="Node" parent="."]

[node name="HiddenUpgrades" type="Node" parent="."]

[node name="lenovoofficemouse" type="Sprite2D" parent="HiddenUpgrades"]
visible = false
position = Vector2(510, 497)
scale = Vector2(0.23681, 0.243257)
texture = ExtResource("13_nr8wp")
script = ExtResource("14_d2bti")

[node name="ddr2ramstick" type="Sprite2D" parent="HiddenUpgrades"]
visible = false
position = Vector2(148.582, 265.185)
scale = Vector2(0.253673, 0.235258)
texture = ExtResource("10_hqns4")
script = ExtResource("11_x0ka3")

[node name="i72600processor" type="Sprite2D" parent="HiddenUpgrades"]
visible = false
position = Vector2(292, 520)
scale = Vector2(0.199673, 0.179258)
texture = ExtResource("12_x0ka3")
script = ExtResource("13_d2bti")

[connection signal="pressed" from="godoot" to="godoot" method="_on_pressed"]
[connection signal="timeout" from="HuanSecondTimer" to="godoot" method="_on_huan_second_timer_timeout"]
[connection signal="timeout" from="UpgradeCheckTimer" to="godoot" method="_on_upgrade_check_timer_timeout"]
